--- a/src/main/resources/fxml/startMenu.fxml
+++ b/src/main/resources/fxml/startMenu.fxml
@@ -24,39 +24,63 @@
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER">
+            <VBox alignment="TOP_CENTER" spacing="10.0">
                <children>
-                  <VBox alignment="TOP_CENTER" spacing="10.0">
+                  <Label text="Launch Parameters">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <HBox alignment="CENTER" spacing="10.0">
                      <children>
-                        <Label text="Launch Parameters">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <HBox alignment="CENTER" spacing="2.0">
+                        <VBox alignment="CENTER" spacing="10.0">
                            <children>
-                              <Label text="x" />
-                              <TextField fx:id="xField" />
-                              <Label text="y" />
-                              <TextField fx:id="yField" />
-                              <Label text="z" />
-                              <TextField fx:id="zField" />
+                              <HBox alignment="CENTER" spacing="3.0">
+                                 <children>
+                                    <Label text="x" />
+                                    <TextField fx:id="xField" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" spacing="3.0">
+                                 <children>
+                                    <Label text="y" />
+                                    <TextField fx:id="yField" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" spacing="3.0">
+                                 <children>
+                                    <Label text="z" />
+                                    <TextField fx:id="zField" />
+                                 </children>
+                              </HBox>
                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER" spacing="2.0">
+                        </VBox>
+                        <VBox alignment="CENTER" spacing="10.0">
                            <children>
-                              <Label text="vx" />
-                              <TextField fx:id="vxField" />
-                              <Label text="vy" />
-                              <TextField fx:id="vyField" />
-                              <Label text="vz" />
-                              <TextField fx:id="vzField" />
+                              <HBox alignment="CENTER" spacing="3.0">
+                                 <children>
+                                    <Label text="vx" />
+                                    <TextField fx:id="vxField" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" spacing="3.0">
+                                 <children>
+                                    <Label text="vy" />
+                                    <TextField fx:id="vyField" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" spacing="3.0">
+                                 <children>
+                                    <Label text="vz" />
+                                    <TextField fx:id="vzField" />
+                                 </children>
+                              </HBox>
                            </children>
-                        </HBox>
+                        </VBox>
                      </children>
-                  </VBox>
+                  </HBox>
                </children>
-            </HBox>
+            </VBox>
             <HBox alignment="CENTER" spacing="10.0">
                <children>
                   <VBox spacing="8.0">
