--- a/src/main/java/Panel.fxml
+++ b/src/main/java/Panel.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI3D">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="titan.GUI3D">
    <children>
       <HBox layoutY="307.0" prefHeight="100.0" prefWidth="600.0">
          <children>
